feat 1. 增加全局loading加载，并针对接口调整使用逻辑